<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50V"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btAniadir"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/a_adir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline50V"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline50H"
        app:layout_constraintVertical_bias="0.422" />

    <Button
        android:id="@+id/btEliminar"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="240dp"
        android:text="@string/eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline50V"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline50H"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/btSig"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline50V"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline50H"
        app:layout_constraintVertical_bias="0.777" />

    <Button
        android:id="@+id/btAnt"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/Anterior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline50V"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline50H"
        app:layout_constraintVertical_bias="0.776" />

    <TextView
        android:id="@+id/tvElementoMostrar"
        android:layout_width="101dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/elemento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline50V"
        app:layout_constraintTop_toTopOf="@+id/guideline50H" />

    <EditText
        android:id="@+id/etInputUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/input"
        app:layout_constraintBottom_toTopOf="@+id/guideline50H"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317"
        android:autofillHints="" />

    <RadioButton
        android:id="@+id/rbList"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:text="@string/lista"
        app:layout_constraintBottom_toTopOf="@+id/guideline50H"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/guideline50V"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <RadioButton
        android:id="@+id/rbSet"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:text="@string/set"
        app:layout_constraintBottom_toTopOf="@+id/guideline50H"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/guideline50V"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <RadioButton
        android:id="@+id/rbMapa"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:text="@string/mapa"
        app:layout_constraintBottom_toTopOf="@+id/guideline50H"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline50V"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <EditText
        android:id="@+id/etAutor"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/autor"
        app:layout_constraintBottom_toTopOf="@+id/guideline50H"
        app:layout_constraintEnd_toStartOf="@+id/guideline50V"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/etMensaje"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/mensaje"
        app:layout_constraintBottom_toTopOf="@+id/guideline50H"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="@+id/guideline50V"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>